Shop purchasing behavior seems to work correctly; buttons will disable when an upgrade is maxed out; strangely, scrObj seem to be reset by OnEnable with each Editor playthrough; now will add transition logic back to intermediate pd btwn lvl end and next lvl @correct lvl

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -84,6 +84,7 @@
      <Compile Include="Assets\Scripts\Game\AIInput.cs" />
      <Compile Include="Assets\Scripts\Game\Constants.cs" />
      <Compile Include="Assets\Scripts\Game\DictionaryDrawer.cs" />
+     <Compile Include="Assets\Scripts\Game\DontDestroy.cs" />
      <Compile Include="Assets\Scripts\Game\EnemySquad.cs" />
      <Compile Include="Assets\Scripts\Game\GameManager.cs" />
      <Compile Include="Assets\Scripts\Game\GameState.cs" />
