--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Camera\CameraController.cs" />
      <Compile Include="Assets\CanvasDontDestroy.cs" />
      <Compile Include="Assets\ContinueScreen.cs" />
      <Compile Include="Assets\Inputs\VirtualJoystick.cs" />
