Additional changes to PlayerShotSpawn / ShotSpawnContainer architecture. Making it more extensible and support possible changes better.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -183,6 +183,7 @@
      <Compile Include="Assets\Scripts\Utility\ParticleSystemAutoDestroy.cs" />
      <Compile Include="Assets\Scripts\Utility\RotationUpdate.cs" />
      <Compile Include="Assets\Scripts\Utility\ShotMover.cs" />
+     <Compile Include="Assets\ShotSpawnContainer.cs" />
      <Compile Include="Assets\SpawnersDontDestroy.cs" />
      <None Include="Assets\Standard Assets\Fonts\OpenSans\License!.txt" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
