--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,9 +48,6 @@
   <ItemGroup>
      <Compile Include="Assets\Camera\CameraController.cs" />
      <Compile Include="Assets\CanvasDontDestroy.cs" />
-     <Compile Include="Assets\ContinueScreen.cs" />
-     <Compile Include="Assets\EMPWaveShot.cs" />
-     <Compile Include="Assets\EnemySpawner.cs" />
      <Compile Include="Assets\Inputs\VirtualJoystick.cs" />
      <Compile Include="Assets\ManagerDontDestroy.cs" />
      <Compile Include="Assets\Prefabs\Powerups\FiringPowerup.cs" />
@@ -67,6 +64,7 @@
      <Compile Include="Assets\Prefabs\Shop UI\UpgradesListPanel.cs" />
      <Compile Include="Assets\Scripts\Enemy\AssassinCollisionHelper.cs" />
      <Compile Include="Assets\Scripts\Enemy\AssassinShip.cs" />
+     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberCollisionHelper.cs" />
      <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberFS.cs" />
      <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberMS.cs" />
      <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberShip.cs" />
@@ -74,6 +72,7 @@
      <Compile Include="Assets\Scripts\Enemy\DropShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyShip.cs" />
      <Compile Include="Assets\Scripts\Enemy\MediShip.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Missile Boss\EMPWaveShot.cs" />
      <Compile Include="Assets\Scripts\Enemy\Missile Boss\EMPWaveShotSPawn.cs" />
      <Compile Include="Assets\Scripts\Enemy\Missile Boss\HitColliderHelper.cs" />
      <Compile Include="Assets\Scripts\Enemy\Missile Boss\MissileBoss.cs" />
@@ -81,16 +80,17 @@
      <Compile Include="Assets\Scripts\Enemy\PawnShip\PawnFS.cs" />
      <Compile Include="Assets\Scripts\Enemy\PawnShip\PawnMS.cs" />
      <Compile Include="Assets\Scripts\Enemy\PawnShip\PawnShip.cs" />
-     <Compile Include="Assets\Scripts\Enemy\RangedShip\BomberCollisionHelper.cs" />
      <Compile Include="Assets\Scripts\Enemy\RangedShip\FiringRangeCollider.cs" />
      <Compile Include="Assets\Scripts\Enemy\RangedShip\RangedFS.cs" />
      <Compile Include="Assets\Scripts\Enemy\RangedShip\RangedMS.cs" />
      <Compile Include="Assets\Scripts\Enemy\RangedShip\RangedShip.cs" />
-     <Compile Include="Assets\Scripts\Enemy\SafeDistanceCollider.cs" />
+     <Compile Include="Assets\Scripts\Enemy\RangedShip\SafeDistanceCollider.cs" />
      <Compile Include="Assets\Scripts\Enemy\Sniper Boss\LaserCollider.cs" />
      <Compile Include="Assets\Scripts\Enemy\Sniper Boss\SniperBoss.cs" />
      <Compile Include="Assets\Scripts\Enemy\Sniper Boss\SniperBossFS.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Sniper Boss\SniperBossFiringDistanceCollider.cs" />
      <Compile Include="Assets\Scripts\Enemy\Sniper Boss\SniperBossMS.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Sniper Boss\SniperBossSafeDistanceCollider.cs" />
      <Compile Include="Assets\Scripts\Enemy\Turret.cs" />
      <Compile Include="Assets\Scripts\FSM\FSMManager.cs" />
      <Compile Include="Assets\Scripts\FSM\IEntityState.cs" />
@@ -128,6 +128,7 @@
      <Compile Include="Assets\Scripts\General\Ship.cs" />
      <Compile Include="Assets\Scripts\General\Shot.cs" />
      <Compile Include="Assets\Scripts\General\ShotSpawn.cs" />
+     <Compile Include="Assets\Scripts\General\ShotSpawnContainer.cs" />
      <Compile Include="Assets\Scripts\General\TurretShotSpawn.cs" />
      <Compile Include="Assets\Scripts\General\Utils.cs" />
      <Compile Include="Assets\Scripts\General\WaveShot.cs" />
@@ -137,6 +138,7 @@
      <Compile Include="Assets\Scripts\Interfaces\IFires.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IKillable.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IMovement.cs" />
+     <Compile Include="Assets\Scripts\Menu\ContinueScreen.cs" />
      <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Menu\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Menu\PowerupHolder.cs" />
@@ -177,6 +179,7 @@
      <Compile Include="Assets\Scripts\Spawners\DropShipSpawn.cs" />
      <Compile Include="Assets\Scripts\Spawners\EnemySpawnCappedTemplate.cs" />
      <Compile Include="Assets\Scripts\Spawners\EnemySpawnTemplate.cs" />
+     <Compile Include="Assets\Scripts\Spawners\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\Spawners\MovingSpawn.cs" />
      <Compile Include="Assets\Scripts\Spawners\MovingSpawnManager.cs" />
      <Compile Include="Assets\Scripts\Spawners\PromotionArea.cs" />
@@ -186,7 +189,6 @@
      <Compile Include="Assets\Scripts\Utility\ParticleSystemAutoDestroy.cs" />
      <Compile Include="Assets\Scripts\Utility\RotationUpdate.cs" />
      <Compile Include="Assets\Scripts\Utility\ShotMover.cs" />
-     <Compile Include="Assets\ShotSpawnContainer.cs" />
      <Compile Include="Assets\SpawnersDontDestroy.cs" />
      <None Include="Assets\Standard Assets\Fonts\OpenSans\License!.txt" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
