Made a Random Shot Generator for SniperBoss by accident...it's radial. May be useful someday.

--- a/Paper Planes [CORE] [2.7.17].csproj
+++ b/Paper Planes [CORE] [2.7.17].csproj
@@ -186,6 +186,7 @@
     <Compile Include="Assets\Scripts\Game\StartMenuManager.cs" />
     <Compile Include="Assets\Scripts\Game\UIManager.cs" />
     <Compile Include="Assets\Scripts\General\AbstractShip.cs" />
+    <Compile Include="Assets\Scripts\General\BulletHellShot.cs" />
     <Compile Include="Assets\Scripts\General\DictRow.cs" />
     <Compile Include="Assets\Scripts\General\Drawing.cs" />
     <Compile Include="Assets\Scripts\General\DropShipShotSpawn.cs" />
