--- a/Paper Planes [CORE] [2.7.17].csproj
+++ b/Paper Planes [CORE] [2.7.17].csproj
@@ -137,6 +137,8 @@
     <Compile Include="Assets\Prefabs\Shop UI\UpgradesListPanel.cs" />
     <Compile Include="Assets\Scripts\Enemy\AssassinCollisionHelper.cs" />
     <Compile Include="Assets\Scripts\Enemy\AssassinShip.cs" />
+    <Compile Include="Assets\Scripts\Enemy\BomberBoss\BomberBoss.cs" />
+    <Compile Include="Assets\Scripts\Enemy\BomberBoss\BomberBossMS.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberCollisionHelper.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberFS.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberMS.cs" />
