--- a/Paper Planes [CORE] [2.7.17].csproj
+++ b/Paper Planes [CORE] [2.7.17].csproj
@@ -119,7 +119,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\BomberMiniBossRushCollider.cs" />
     <Compile Include="Assets\Camera\CameraController.cs" />
     <Compile Include="Assets\CanvasDontDestroy.cs" />
     <Compile Include="Assets\Inputs\VirtualJoystick.cs" />
@@ -147,6 +146,7 @@
     <Compile Include="Assets\Scripts\Enemy\BomberBoss\BomberBossStageTwoMS.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberBoss\BomberMiniBoss.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberBoss\BomberMiniBossMS.cs" />
+    <Compile Include="Assets\Scripts\Enemy\BomberBoss\BomberMiniBossRushCollider.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberBoss\ShipSpawn.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberCollisionHelper.cs" />
     <Compile Include="Assets\Scripts\Enemy\BomberShip\BomberFS.cs" />
