Map edits, new Retry screen

--- a/Paper Planes [CORE] [2.7.17].csproj
+++ b/Paper Planes [CORE] [2.7.17].csproj
@@ -133,6 +133,7 @@
     <Compile Include="Assets\Prefabs\Powerups\Shuriken\ShurikenScrObj.cs" />
     <Compile Include="Assets\Prefabs\Powerups\Shuriken\ShurikenSizeScrObj.cs" />
     <Compile Include="Assets\Prefabs\Powerups\UpgradableScriptableObject.cs" />
+    <Compile Include="Assets\Prefabs\UI\GameOverScreen.cs" />
     <Compile Include="Assets\Prefabs\UI\ScoreText.cs" />
     <Compile Include="Assets\Prefabs\UI\ShopSlot.cs" />
     <Compile Include="Assets\Prefabs\UI\UpgradesListPanel.cs" />
