Working on start screen

--- a/Paper Planes [CORE] [2.7.17].csproj
+++ b/Paper Planes [CORE] [2.7.17].csproj
@@ -137,6 +137,7 @@
     <Compile Include="Assets\Prefabs\UI\PlayAgainButton.cs" />
     <Compile Include="Assets\Prefabs\UI\ScoreText.cs" />
     <Compile Include="Assets\Prefabs\UI\ShopSlot.cs" />
+    <Compile Include="Assets\Prefabs\UI\StartScreen.cs" />
     <Compile Include="Assets\Prefabs\UI\UpgradesListPanel.cs" />
     <Compile Include="Assets\Scripts\Enemy\AssassinCollisionHelper.cs" />
     <Compile Include="Assets\Scripts\Enemy\AssassinShip.cs" />
