--- a/Paper Planes [CORE] [2.7.17].csproj
+++ b/Paper Planes [CORE] [2.7.17].csproj
@@ -133,16 +133,18 @@
     <Compile Include="Assets\Prefabs\Powerups\Shuriken\ShurikenScrObj.cs" />
     <Compile Include="Assets\Prefabs\Powerups\Shuriken\ShurikenSizeScrObj.cs" />
     <Compile Include="Assets\Prefabs\Powerups\UpgradableScriptableObject.cs" />
+    <Compile Include="Assets\Prefabs\UI\BGMSoundButton.cs" />
     <Compile Include="Assets\Prefabs\UI\CreditsScreen.cs" />
     <Compile Include="Assets\Prefabs\UI\GameOverScreen.cs" />
     <Compile Include="Assets\Prefabs\UI\MenuScreen.cs" />
+    <Compile Include="Assets\Prefabs\UI\MusicSettingsScreen.cs" />
     <Compile Include="Assets\Prefabs\UI\PauseButton.cs" />
     <Compile Include="Assets\Prefabs\UI\PauseMainMenu.cs" />
     <Compile Include="Assets\Prefabs\UI\PlayAgainButton.cs" />
+    <Compile Include="Assets\Prefabs\UI\SFXSoundButton.cs" />
     <Compile Include="Assets\Prefabs\UI\ScoreText.cs" />
     <Compile Include="Assets\Prefabs\UI\SettingsButton.cs" />
     <Compile Include="Assets\Prefabs\UI\ShopSlot.cs" />
-    <Compile Include="Assets\Prefabs\UI\SoundButton.cs" />
     <Compile Include="Assets\Prefabs\UI\StartScreen.cs" />
     <Compile Include="Assets\Prefabs\UI\TutorialConfirmScreen.cs" />
     <Compile Include="Assets\Prefabs\UI\UpgradesListPanel.cs" />
